--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@headlessui/react": "^1.7.14",
     "@popperjs/core": "2.9.1",
+    "axios": "^1.4.0",
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "next": "13.0.0",
+    "next-auth": "^4.22.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
     "react-scripts": "4.0.3",
     "react-select": "^5.7.3",
     "react-table": "^7.8.0"
