--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "next": "13.0.0",
     "next-auth": "^4.22.1",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.43.9",
