--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-hot-toast": "^2.4.1",
     "react-scripts": "4.0.3",
     "react-select": "^5.7.3",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "next start",
