--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gulp-append-prepend": "1.0.8",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29",
     "moment": "^2.29.4",
     "next": "13.0.0",
     "next-auth": "^4.22.1",
